Added PlayerClickNPCEvent, Added TabComplete